--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600;700&family=Outfit:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <title>My Parcel App</title>
   </head>
 
