--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.jsx"></script>
   </body>
 </html>
